[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Sprites/Player/Run4.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Player/Run7.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Player/Run0.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Player/Run3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Player/Run1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Player/Run2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/DynamicFonts/Open_Sans_SemiBold_42px.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=8]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/Open_Sans/OpenSans-BoldItalic.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 1 )

[sub_resource type="AnimatedTexture" id=3]
flags = 4
frames = 6
fps = 10.0
frame_0/texture = ExtResource( 3 )
frame_1/texture = ExtResource( 6 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 6 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 4 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 1 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 2 )
frame_5/delay_sec = 0.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=5]
resource_name = "show"
length = 3.1
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/CenterContainer/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/HBoxContainer/TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/GemsLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/EnemiesLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer/ScoreLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VBoxContainer/ContinueButton:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("VBoxContainer:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 3.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animation_finished"
} ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 508.0
margin_right = 771.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
text = "congrats"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 1280.0
margin_bottom = 212.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 479.0
margin_right = 543.0
margin_bottom = 120.0
texture = SubResource( 3 )
stretch_mode = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="VBoxContainer/HBoxContainer"]
visible = false
scale = Vector2( 4, 4 )
frames = SubResource( 4 )
frame = 3
speed_scale = 2.0
playing = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 547.0
margin_right = 800.0
margin_bottom = 120.0

[node name="GemsLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 253.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 7 )
text = "Gems 000"
align = 2
valign = 1

[node name="EnemiesLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 253.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 7 )
text = "Enemies 000"
valign = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
margin_top = 216.0
margin_right = 1280.0
margin_bottom = 274.0
custom_fonts/font = ExtResource( 7 )
text = "Score 000"
align = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
margin_top = 278.0
margin_right = 1280.0
margin_bottom = 342.0
custom_fonts/font = ExtResource( 7 )
text = "continue"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show = SubResource( 5 )
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
